<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="total_balance">Total Balance</string>
    <string name="this_month">This Month</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="comparedTo">Compared to ₦%1$.2f last month</string>

    <string name="naira_amount">₦%1$s</string>
    <string name="balance_percent">%1$.2f%%</string>

    <string name="budgets">Budgets</string>
    <string name="n_budgets">%1$d budgets</string>
    <string name="percent_of_total_budget_spent">%1$d%% of total budget spent</string>
    <string name="analytics">Analytics</string>
    <string name="this_month_spending">This month spending</string>
    <string name="analytics_compared_last_month">-3.0% compared to last month</string>
    <string name="see_all">See all</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="entertainment">Entertainment</string>
    <string name="main_account_today">Main Account · %1$s</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="expense_name">Expense Name</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="_26_09_2025">26/09/2025</string>
    <string name="_08_26_am">08:26 AM</string>
    <string name="budget">Budget</string>
    <string name="select_a_budget">Select a budget</string>
    <string name="new_monthly_budget">New Monthly Budget</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="select_date">Select date</string>

</resources>