<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/Heading.H5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:drawableLeftCompat="@drawable/arrow_left"
            android:drawablePadding="24dp"
            android:text="@string/add_transaction" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/expense_name"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:endIconDrawable="@drawable/calculator"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            style="@style/Heading.H5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/date_amp_time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp">

            <TextView
                android:id="@+id/select_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/_26_09_2025"
                app:drawableLeftCompat="@drawable/calendar" />

            <TextView
                android:id="@+id/select_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/_08_26_am"
                app:drawableLeftCompat="@drawable/clock_four" />
        </LinearLayout>

        <TextView
            style="@style/Heading.H5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/select_a_budget"
            android:fontFamily="@font/notoserif_medium"
            android:textSize="14sp" />

        <com.codeycoder.expensetracker.views.RoundedCard
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/grayscale_100"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:radius="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:text="@string/new_monthly_budget"
                app:drawableStartCompat="@drawable/bank_card_line"
                app:drawableTint="@color/error_200" />

        </com.codeycoder.expensetracker.views.RoundedCard>
    </LinearLayout>

    <com.codeycoder.expensetracker.views.RoundedCard
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/black"
        android:paddingVertical="16dp"
        app:radius="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/notoserif_medium"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </com.codeycoder.expensetracker.views.RoundedCard>
</FrameLayout>